# lib-not-dr

./: .gitignore  .pdm-python  README.md  pdm.toml  pyproject.toml
docs/: change_log.md  command.md
docs/change_logs/: 0-3.md  0-4.md  old.md  readme.md  summary.md
docs/release-plan/: 0-3.md  0-4.md  summary.md
example/lndl-nuitka/: example1.toml
example/logger/: formatter.py  logger.py  outstream.py
lib_not_dr/: __init__.py
lib_not_dr/command/: data.py  descriptor.py  exception.py  nodes.py
lib_not_dr/logger/: __init__.py  formatter.py  logger.py  outstream.py  structers.py  structure.py
lib_not_dr/logger/formatter/: __init__.py  colors.py
lib_not_dr/nuitka/: compile.py
lib_not_dr/types/: options.py
lndl_nuitka/: __init__.py  __main__.py
scripts/: pub.py
src/lib_not_dr/: __init__.py
src/lib_not_dr/command/: data.py  descriptor.py  nodes.py
src/lib_not_dr/logger/: __init__.py  config.py  logger.py  outstream.py  structure.py
src/lib_not_dr/logger/formatter/: __init__.py  colors.py
src/lib_not_dr/loggers/: __init__.py  config.py  logger.py  outstream.py  structure.py
src/lib_not_dr/loggers/formatter/: __init__.py  colors.py
src/lib_not_dr/nuitka/: __init__.py  compile.py  parse.py
src/lib_not_dr/nuitka/reader/: __init__.py  arg_parser.py
src/lib_not_dr/types/: __init__.py  options.py  version.py
src/lndl_nuitka/: __init__.py  __main__.py
test/: __init__.py  command.py
test/logger/: config.py  formatter.py  structure.py
