[project]
version = "0.1.1"
name = "lib-not-dr"
description = "A python lib created from Difficult Rocket development"
readme = "README.md"
authors = [
    {name = "shenjackyuanjie", email = "3695888@qq.com"}
]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = { file = "LICENSE" }

[project.urls]
Homepage = "https://github.com/shenjackyuanjie/lib-not-dr"
Repository = "https://github.com/shenjackyuanjie/lib-not-dr"
Changelog = "https://github.com/shenjackyuanjie/lib-not-dr/blob/main/docs/change_log.md"


[tool.ruff]
target-version = "py38"
line-length = 150
src = [
    "lib_not_dr"
]
format = "grouped"