[project]
name = "lib-not-dr"
description = "A python lib created from Difficult Rocket development"
readme = "README.md"
authors = [
    {name = "shenjackyuanjie", email = "3695888@qq.com"}
]

requires-python = ">=3.8"
classifiers = [
    "Intended Audience :: Developers",
    # Python 3 支持版本.
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    # Python 实现.
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    # 系统支持.
    "Operating System :: OS Independent",
]
license = { text = "MPL-2.0" }
dynamic = ["version"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

#[tool.setuptools]
#packages = ["lib_not_dr", "lndl_nuitka"]

#[tool.setuptools.packages.find]
#namespaces = false
#include = [
#    "lib_not_dr",
#    "lndl_nuitka"
#]
#where = ["."]

#[tool.setuptools.package-dir]
#lib_not_dr = "lib_not_dr"
#lndl_nuitka = "lndl_nuitka"

[project.optional-dependencies]
nuitka = [
    "tomli >= 2.0.1",
    "nuitka", # any version
]
dev = ["twine"]

[tool.pdm.scripts]
pub = { call = "scripts.pub:main" }
pre_build = { call = "scripts.pub:clean_build" }
post_publish = { call = "scripts.pub:upload_gitea" }

[tool.setuptools.dynamic]
version = { attr = "lib_not_dr._version_"}

[project.urls]
Issues = "https://github.com/shenjackyuanjie/lib-not-dr/issues"
Homepage = "https://github.com/shenjackyuanjie/lib-not-dr"
Repository = "https://github.com/shenjackyuanjie/lib-not-dr"
Changelog = "https://github.com/shenjackyuanjie/lib-not-dr/blob/main/docs/change_logs"

[project.scripts]
lndl_nuitka = "lndl_nuitka:main"

[tool.ruff]
target-version = "py38"
line-length = 100
src = [
    "src",
]

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # pyflakes
    "I", # isort
    "W", # pycodestyle
]
ignore = ["I001"]  # do not sort my imports

[tool.ruff.lint.isort]
force-single-line = false
force-wrap-aliases = false
combine-as-imports = false

[tool.lndl.nuitka.cli]
main = "test-only.py"
onefile = false
standalone = true

